Version 2.1.175
    Added a set of "mastery" subskills meant for end game progression
    Added the mastery subskill 'Mother Lode' to Mining
    Added the mastery subskill 'Clean Cuts' to Woodcutting
    Added /mmopower command (aliases /mmopowerlevel /powerlevel)
    Added 'mcmmo.commands.mmopower' permission node
    Added 'mcmmo.ability.acrobatics.mastery' permission node
    Added 'mcmmo.ability.alchemy.mastery' permission node
    Added 'mcmmo.ability.archery.mastery' permission node
    Added 'mcmmo.ability.axes.mastery' permission node
    Added 'mcmmo.ability.excavation.mastery' permission node
    Added 'mcmmo.ability.fishing.mastery' permission node
    Added 'mcmmo.ability.herbalism.mastery' permission node
    Added 'mcmmo.ability.mining.motherlode' permission node
    Added 'mcmmo.ability.repair.mastery' permission node
    Added 'mcmmo.ability.salvage.mastery' permission node
    Added 'mcmmo.ability.smelting.mastery' permission node
    Added 'mcmmo.ability.salvage.mastery' permission node
    Added 'mcmmo.ability.swords.mastery' permission node
    Added 'mcmmo.ability.taming.mastery' permission node
    Added 'mcmmo.ability.unarmed.mastery' permission node
    Added 'mcmmo.ability.woodcutting.cleancuts' permission node
    Added 'Mining.SubSkill.MotherLode.Name' to locale
    Added 'Mining.SubSkill.MotherLode.Stat' to locale
    Added 'Mining.SubSkill.MotherLode.Description' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Name' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Stat' to locale
    Added 'Woodcutting.SubSkill.CleanCuts.Description' to locale

    Added 'General.PowerLevel.Skill_Mastery.Enabled' to config.yml which is used to enable or disable the mastery skills (will also disable the new power level command)

    NOTES:
    The goal of this update is to provide a small benefit to each skill and a reason to grind past the "maximum", ideally for a long while.