@@ -49,6 +49,12 @@ public class ChatConfig extends AutoUpdateConfigLoader {
         return config.getBoolean(key, true);
     }
 
+    public boolean isConsoleIncludedInAudience(@NotNull ChatChannel chatChannel) {
+        String key = "Chat.Channels." + StringUtils.getCapitalized(chatChannel.toString()) + ".Send_To_Console";
+        return config.getBoolean(key, true);
+    }
+
+
     public boolean isSpyingAutomatic() {
         return config.getBoolean("Chat.Channels.Party.Spies.Automatically_Enable_Spying", false);
     }
